[LayoutNG] Check line direction instead of block direction in bidi adjustment

Existing bidi adjustment code compares block direction against text runs'
resolved directions, and perform different types of adjustments depending
on the comparison result.

This is incorrect, as block direction is not necessarily the same as the line's
base direction. This patch corrects it by checking line direction instead.

Note: this patch only fixes the LayoutNG implementation. Legacy remains unfixed
because the line direction is not stored anywhere, and is hard to compute.

Cq-Include-Trybots: master.tryserver.chromium.linux:linux_layout_tests_layout_ng
Bug: 848929
Change-Id: I2e15237d73bea0374d2b9d466040a6e4dd55cdc3
Reviewed-on: https://chromium-review.googlesource.com/1083621
Commit-Queue: Xiaocheng Hu <xiaochengh@chromium.org>
Reviewed-by: Koji Ishii <kojii@chromium.org>
Cr-Commit-Position: refs/heads/master@{#564263}
Former-commit-id: e6baa395e3dec8e33e23eaf8d2e533f1276b3a7a